# audioEngram

./: .gitignore  .gitmodules  AGENT.md  CLAUDE.md  ENGINEER_ONBOARDING.md  README.md  RESEARCH_DISCUSSION2.md  RESEARCH_DISCUSSION4.md  SPEC.md  TIER4_EXPERIMENTs.md  commands.txt  instance_setup.py  intermediate_results.md  mimi_autoencoder.py  pyproject.toml
.claude/: settings.local.json
.codex/: last_run_id
.codex-chat/: events.jsonl
.codex/20260201-210444-7587/: report.md
.codex/20260201-231146-12611/: report.md
.research-loop-logs/: iteration_5_output.jsonl  iteration_5_output.txt  iteration_5_prompt.txt  iteration_6_output.jsonl  iteration_6_output.txt  iteration_6_prompt.txt  iteration_7_output.jsonl  iteration_7_output.txt  iteration_7_prompt.txt
.research-loop-logs/iteration_5_codex/: session_id
.research-loop-logs/iteration_7_codex/: last_response.md  reply_events.jsonl
configs/: calm_speech_continuation.yaml  phase0.yaml  phase1.yaml  phase3.yaml  phase4.yaml  tier1_exp1_vmf.yaml  tier1_exp1b_vmf_rollout.yaml  tier1_exp2_injection.yaml  tier1_exp3_rep_compare.yaml  tier1_exp3b_synthetic.yaml  tier1_exp4_linear_readout.yaml  tier2_exp5_betavae.yaml  tier2_exp6_score_correction.yaml  tier2_exp6_score_correction_betavae32.yaml  tier2_exp6b_projector_correction.yaml  tier2_exp6b_projector_correction_betavae32.yaml  tier2_exp7_perceptual_rollout.yaml  tier2_exp8_direction_codebook.yaml  tier2_exp9_pocket_mimi_vae.yaml  tier3_exp10_direction_ar.yaml  tier3_exp11_consistency_rollout.yaml  tier4_exp12_state_conditioned_directions.yaml
docs/: BRIEF.md  RESEARCH_DISCUSSION1.md  RESEARCH_DISCUSSION10.md  RESEARCH_DISCUSSION11.md  RESEARCH_DISCUSSION12.md  RESEARCH_DISCUSSION3.md  RESEARCH_DISCUSSION5.md  RESEARCH_DISCUSSION6.md  RESEARCH_DISCUSSION7.md  RESEARCH_DISCUSSION8.md  RESEARCH_DISCUSSION9.md  TEAM_BRIEF.md
outputs/: manifest.jsonl
outputs/phase0/: phase1_mimi512_mdn_k1_local.yaml
outputs/phase3/: eval_metrics.json  train_log.jsonl
outputs/phase4/: phase4_rollout_finetune_summary.json  phase4_rollout_finetune_summary_pure.json  phase4_rollout_finetune_summary_tw01.json  phase4_rollout_finetune_summary_tw01_sw05.json
random/: remote_instance_setup.sh
scripts/: 00_download_librispeech.sh  01_make_speaker_splits.py  02_infer_latents.py  03_build_phase0_dataset.py  04_fit_conditioning.py  05_eval_metrics.py  06_make_report.py  07_sanity_check_phase0.py  10_phase1_predictor_baseline.py  11_phase1_debug_train_eval_discrepancy.py  20_phase3_train_factorizer.py  21_phase3_export_zdyn.py  30_phase4_fit_memory.py  31_phase4_train_eval.py  32_phase4_rollout_finetune.py  calm_speech_continuation.py  collect_results.py  tier1_exp1_vmf.py  tier1_exp1b_vmf_rollout_train.py  tier1_exp2_injection.py  tier1_exp3_rep_compare.py  tier1_exp3b_synthetic_audio.py  tier1_exp4_linear_readout.py  tier1_run_all.py  tier2_exp5_betavae.py  tier2_exp6_score_correction.py  tier2_exp6b_projector_correction.py  tier2_exp7_perceptual_rollout.py  tier2_exp8_direction_codebook.py  tier2_exp9_pocket_mimi_vae.py  tier3_exp10_direction_ar.py  tier3_exp11_consistency_rollout.py  tier4_exp12_state_conditioned_directions.py
src/: experiment.py
src/calm/: __init__.py  data.py  model.py  train.py
src/engram_audio_phase0.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/phase0/: __init__.py
src/phase1/: __init__.py  checkpoints.py  data.py  debug.py  direction_ar.py  mdn.py  (+5 more)
tests/: test_calm_model.py  test_indexing.py  test_phase0_synthetic_pipeline.py  test_phase1_dataset_indexing.py  test_phase1_mdn.py  test_phase1_vmf.py  test_phase3_shapes.py  test_phase4_shapes.py  test_reproducibility.py  test_tier1_exp2_injection.py  test_tier4_exp12_cache.py  test_variance_ratio.py
(+370 files in other folders)
